# JerryCat

./: LICENSE.md  README.md  jerrycat.py  main.py  pyproject.toml  requirements.txt
core/: Output.py  utils.py
webshell/: web_shell.war
wordlists/: password-list-common-tomcat.txt
